fixed scrollbar style and responsived lavazem component

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+  /* Enable smooth scrolling for the entire document */
+  html {
+    scroll-behavior: smooth;
+  }
 
+  /* Width of the scrollbar */
+  ::-webkit-scrollbar {
+    @apply w-2;
+  }
+
+  /* Track of the scrollbar */
+  ::-webkit-scrollbar-track {
+    @apply bg-inherit bg-gray-200;
+  }
+
+  /* Handle of the scrollbar */
+  ::-webkit-scrollbar-thumb {
+    @apply bg-gray-400 rounded-2xl;
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-indigo-500;
+  }
+}}
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
